Enable running EC2 and EKS tests on personal aws testing account.

--- a/.github/workflows/java-eks-otlp-ocb-canary.yml
+++ b/.github/workflows/java-eks-otlp-ocb-canary.yml
@@ -8,8 +8,8 @@
 ## Logs, metrics, and traces are all validated.
 name: Java EKS OTLP/OCB Enablement Canary Test
 on:
-  schedule:
-    - cron: '12,37 * * * *' # run the workflow at 12th and 37th minute of every hour
+  # schedule:
+  #   - cron: '12,37 * * * *' # run the workflow at 12th and 37th minute of every hour
   workflow_dispatch: # be able to run the workflow on demand
 
 permissions:
@@ -33,4 +33,4 @@ jobs:
       aws-region: ${{ matrix.aws-region }}
       test-cluster-name: 'e2e-java-otlp-ocb-canary-test'
       caller-workflow-name: 'appsignals-java-e2e-eks-otlp-ocb-canary-test'
-      java-version: '11'
+      java-version: '21'
