--- a/.github/workflows/java-sample-app-ecr-deploy.yml
+++ b/.github/workflows/java-sample-app-ecr-deploy.yml
@@ -17,6 +17,8 @@ env:
   JAVA_MAIN_SAMPLE_APP_IMAGE: "appsignals-java-springboot-main-service"
   JAVA_REMOTE_SAMPLE_APP_IMAGE: "appsignals-java-springboot-remote-service"
   E2E_TEST_ACCOUNT_ID: ${{ secrets.APPLICATION_SIGNALS_E2E_TEST_ACCOUNT_ID }}
+  AWS_ACCESS_KEY_ID: ${{ secrets.LK_KEY_ID }}
+  AWS_SECRET_ACCESS_KEY: ${{ secrets.LK_KEY_VALUE }}
   # E2E_TEST_ROLE_NAME: ${{ secrets.APPLICATION_SIGNALS_E2E_TEST_ROLE_NAME }}
 
 jobs:
