--- a/.github/workflows/java-eks-otlp-ocb-canary.yml
+++ b/.github/workflows/java-eks-otlp-ocb-canary.yml
@@ -8,8 +8,8 @@
 ## Logs, metrics, and traces are all validated.
 name: Java EKS OTLP/OCB Enablement Canary Test
 on:
-  schedule:
-    - cron: '12,37 * * * *' # run the workflow at 12th and 37th minute of every hour
+  # schedule:
+  #   - cron: '12,37 * * * *' # run the workflow at 12th and 37th minute of every hour
   workflow_dispatch: # be able to run the workflow on demand
 
 permissions:
