--- a/.github/workflows/java-eks-otlp-ocb-test.yml
+++ b/.github/workflows/java-eks-otlp-ocb-test.yml
@@ -58,7 +58,7 @@ env:
   AWS_REGION: "us-east-1"
   JAVA_MAIN_SAMPLE_APP_IMAGE: "appsignals-java-springboot-main-service"
   JAVA_REMOTE_SAMPLE_APP_IMAGE: "appsignals-java-springboot-remote-service"
-  # E2E_TEST_ROLE_NAME: ${{ secrets.APPLICATION_SIGNALS_E2E_TEST_ROLE_NAME }}
+  E2E_TEST_ROLE_NAME: "app-signals-java-e2e-eks--e2ejavaotlpocbcanarytestC-yWngeskUp6J5"
   # WARNING: enabling these will always produce verbose debug logs for every run.
   # Set to literal 'true' so debug is always enabled (per user request).
   ACTIONS_STEP_DEBUG: 'true'
@@ -111,11 +111,11 @@ jobs:
           cleanup: "rm -f install-otel-operator.sh"
           post-command: "chmod +x install-otel-operator.sh"
 
-      # - name: Configure AWS Credentials
-      #   uses: aws-actions/configure-aws-credentials@a03048d87541d1d9fcf2ecf528a4a65ba9bd7838 #5.0.0
-      #   with:
-      #     role-to-assume: arn:aws:iam::${{ env.E2E_TEST_ACCOUNT_ID }}:role/${{ env.E2E_TEST_ROLE_NAME }}
-      #     aws-region: us-east-1
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@a03048d87541d1d9fcf2ecf528a4a65ba9bd7838 #5.0.0
+        with:
+          role-to-assume: arn:aws:iam::${{ env.E2E_TEST_ACCOUNT_ID }}:role/${{ env.E2E_TEST_ROLE_NAME }}
+          aws-region: us-east-1
 
       # - name: Retrieve account
       #   uses: aws-actions/aws-secretsmanager-get-secrets@a9a7eb4e2f2871d30dc5b892576fde60a2ecc802 #v2.0.10
@@ -125,11 +125,11 @@ jobs:
       #       JAVA_MAIN_SAMPLE_APP_IMAGE, e2e-test/java-main-sample-app-image
       #       JAVA_REMOTE_SAMPLE_APP_IMAGE, e2e-test/java-remote-sample-app-image
 
-      # - name: Configure AWS Credentials
-      #   uses: aws-actions/configure-aws-credentials@a03048d87541d1d9fcf2ecf528a4a65ba9bd7838 #5.0.0
-      #   with:
-      #     role-to-assume: arn:aws:iam::${{ env.ACCOUNT_ID }}:role/${{ env.E2E_TEST_ROLE_NAME }}
-      #     aws-region: ${{ env.E2E_TEST_AWS_REGION }}
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@a03048d87541d1d9fcf2ecf528a4a65ba9bd7838 #5.0.0
+        with:
+          role-to-assume: arn:aws:iam::${{ env.ACCOUNT_ID }}:role/${{ env.E2E_TEST_ROLE_NAME }}
+          aws-region: ${{ env.E2E_TEST_AWS_REGION }}
 
       # local directory to store the kubernetes config
       - name: Create kubeconfig directory
