--- a/.github/workflows/java-eks-otlp-ocb-test.yml
+++ b/.github/workflows/java-eks-otlp-ocb-test.yml
@@ -346,50 +346,53 @@ jobs:
             echo "validation-result=failure" >> $GITHUB_OUTPUT
           fi
 
-      - name: Clean up
-        if: always()
-        continue-on-error: true
-        timeout-minutes: 5
-        working-directory: terraform/java/eks-otlp-ocb/util
-        run: |
-          aws eks update-kubeconfig --name ${{ env.CLUSTER_NAME }} --region ${{ env.E2E_TEST_AWS_REGION }}
-          kubectl delete ns ${{ env.SAMPLE_APP_NAMESPACE }}
-          eksctl delete iamserviceaccount --name cloudwatch-agent --namespace amazon-cloudwatch --cluster ${{ env.CLUSTER_NAME }} --region ${{ env.E2E_TEST_AWS_REGION }}
-          kubectl delete ns opentelemetry-operator-system
-          aws eks update-kubeconfig --name ${{ env.CLUSTER_NAME }} --region ${{ env.E2E_TEST_AWS_REGION }}
+      # - name: Clean up
+      #   if: always()
+      #   continue-on-error: true
+      #   timeout-minutes: 5
+      #   working-directory: terraform/java/eks-otlp-ocb/util
+      #   run: |
+      #     aws eks update-kubeconfig --name ${{ env.CLUSTER_NAME }} --region ${{ env.E2E_TEST_AWS_REGION }}
+      #     kubectl delete ns ${{ env.SAMPLE_APP_NAMESPACE }}
+      #     eksctl delete iamserviceaccount --name cloudwatch-agent --namespace amazon-cloudwatch --cluster ${{ env.CLUSTER_NAME }} --region ${{ env.E2E_TEST_AWS_REGION }}
+      #     kubectl delete ns opentelemetry-operator-system
+      #     aws eks update-kubeconfig --name ${{ env.CLUSTER_NAME }} --region ${{ env.E2E_TEST_AWS_REGION }}
 
-      - name: Terraform destroy
-        if: always()
-        continue-on-error: true
-        timeout-minutes: 5
-        working-directory: terraform/java/eks-otlp-ocb
-        run: |
-          terraform destroy -auto-approve \
-            -var="test_id=${{ env.TESTING_ID }}" \
-            -var="aws_region=${{ env.E2E_TEST_AWS_REGION }}" \
-            -var="kube_directory_path=${{ github.workspace }}/.kube" \
-            -var="eks_cluster_name=${{ env.CLUSTER_NAME }}" \
-            -var="test_namespace=${{ env.SAMPLE_APP_NAMESPACE }}" \
-            -var="service_account_aws_access=sa-${{ env.TESTING_ID }}" \
-            -var="sample_app_image=${{ env.MAIN_SAMPLE_APP_IMAGE_ARN }}" \
-            -var="sample_remote_app_image=${{ env.REMOTE_SAMPLE_APP_IMAGE_ARN }}"
+      # - name: Terraform destroy
+      #   if: always()
+      #   continue-on-error: true
+      #   timeout-minutes: 5
+      #   working-directory: terraform/java/eks-otlp-ocb
+      #   run: |
+      #     terraform destroy -auto-approve \
+      #       -var="test_id=${{ env.TESTING_ID }}" \
+      #       -var="aws_region=${{ env.E2E_TEST_AWS_REGION }}" \
+      #       -var="kube_directory_path=${{ github.workspace }}/.kube" \
+      #       -var="eks_cluster_name=${{ env.CLUSTER_NAME }}" \
+      #       -var="test_namespace=${{ env.SAMPLE_APP_NAMESPACE }}" \
+      #       -var="service_account_aws_access=sa-${{ env.TESTING_ID }}" \
+      #       -var="sample_app_image=${{ env.MAIN_SAMPLE_APP_IMAGE_ARN }}" \
+      #       -var="sample_remote_app_image=${{ env.REMOTE_SAMPLE_APP_IMAGE_ARN }}"
 
-      - name: Remove aws access service account
-        if: always()
-        continue-on-error: true
-        run: |
-          eksctl delete iamserviceaccount \
-          --name sa-${{ env.TESTING_ID }} \
-          --namespace ${{ env.SAMPLE_APP_NAMESPACE }} \
-          --cluster ${{ env.CLUSTER_NAME }} \
-          --region ${{ env.E2E_TEST_AWS_REGION }}
+      # - name: Remove aws access service account
+      #   if: always()
+      #   continue-on-error: true
+      #   run: |
+      #     eksctl delete iamserviceaccount \
+      #     --name sa-${{ env.TESTING_ID }} \
+      #     --namespace ${{ env.SAMPLE_APP_NAMESPACE }} \
+      #     --cluster ${{ env.CLUSTER_NAME }} \
+      #     --region ${{ env.E2E_TEST_AWS_REGION }}
 
-      - name: Remove Application Signals Collector IAM service account
-        if: always()
-        continue-on-error: true
-        run: |
-          eksctl delete iamserviceaccount \
-            --name appsignals-collector \
-            --namespace ${{ env.SAMPLE_APP_NAMESPACE }} \
-            --cluster ${{ env.CLUSTER_NAME }} \
-            --region ${{ env.E2E_TEST_AWS_REGION }}
+      # - name: Remove Application Signals Collector IAM service account
+        # if: always()
+        # continue-on-error: true
+        # run: |
+        #   eksctl delete iamserviceaccount \
+        #     --name appsignals-collector \
+        #     --namespace ${{ env.SAMPLE_APP_NAMESPACE }} \
+        #     --cluster ${{ env.CLUSTER_NAME }} \
+        #     --region ${{ env.E2E_TEST_AWS_REGION }}
+
+
+
